# MixerOS

./: .markdownlint.json  Cargo.toml  MixerOS.code-workspace  READNE.md  TODO.md  opencl-wsl2-installer.sh  setup-ubuntu.sh
Design/: Libraries.md  color-pallete.md
Docs/.obsidian/: workspace.json
Docs/.obsidian/plugins/progress-tracker/: main.js  manifest.json
Docs/Stage Boxes/Hardware/: Hardware.md
Docs/Stage Boxes/Hardware/IO Panel/: IO Panel.md  Screen.md
Docs/Stage Boxes/Overview/: Overview.md  Specs.md
Docs/Stage Boxes/Software/: Software.md
Linux/: README.md
MixerOS/: package.json  pnpm-lock.yaml  vite.config.ts
MixerOS/src/: main.css  main.ts
MixerOS/src-tauri/: Cargo.toml  tauri.conf.json
MixerOS/src-tauri/src/: lib.rs  main.rs
MixerOS/src-tauri/src/dsp_engine/: deviceManager.rs  engine.rs  mod.rs
MixerOS/src/components/Routing/: RoutingWindow.vue  deviceTable.vue  routerGUI.vue
MixerOS/src/components/nav/: appmenu.vue  navbar.vue  statusbar.vue
MixerOS/src/pages/: mainApp.vue  startScreen.vue
MixerOS/src/schema/: AudioProcessingEngine.ts  Remote.ts
MixerOS/src/stores/: windowState.ts
MixerOSEngine/: Cargo.toml
MixerOSEngine/src/: cli.rs  engine.rs  main.rs
MixerOSEngine/src/ascii/: divider.txt  logo.txt
MixerOSEngine/src/dasp/: core.rs  mod.rs  module_manager.rs
MixerOSEngine/src/dasp/dasp_modules/: mod.rs  module.rs  module_param.rs
MixerOSEngine/src/dasp/dasp_modules/modules/: mod.rs
MixerOSEngine/src/dasp/dasp_modules/modules/equalizer/: biquad.rs  eq.rs  mod.rs  module.rs
MixerOSEngine/src/dasp/dasp_modules/modules/equalizer/shaders/: compute.comp
MixerOSEngine/src/dasp/processor/: mod.rs  processor.rs
MixerOSEngine/src/dasp/processor/cpu/: cpu.rs
MixerOSEngine/src/dasp/processor/gpu/: allocator.rs  boilerplate.rs  gpu.rs  mod.rs  pipeline.rs
MixerOSEngine/src/router/: bus.rs  channel.rs  error.rs  mod.rs
MixerOSEngine/src/system/: mod.rs  state.rs  util.rs
MixerOSEngine/src/web/: server.rs
mixeros/: .wakatime-project  index.html
mixeros/src/: App.vue
mixeros/src-tauri/: Cargo.toml
mixeros/src-tauri/src/commands/: audio.rs
mixeros/src/components/Routing/: deviceTable.vue
mixeros/src/components/nav/: navbar.vue
mixeros/src/pages/: Loading.vue
mixeros/src/router/: router.ts
mixeros/src/schema/: Network.ts  window.ts
mixeros_engine/: .gitignore  Cargo.toml
mixeros_engine/crate/: BUILD.bazel  Cargo.toml  MODULE.bazel
mixeros_engine/crate/src/cli/: cli.rs
mixeros_engine/crate/src/dasp/dasp_modules/: mod.rs
mixeros_engine/crate/src/dasp/processor/: error.rs
mixeros_engine/crate/src/web/: mod.rs
mixeros_engine/shaders/: parametriceq.cl
mixeros_engine/src/: engine.rs  main.rs
mixeros_engine/src/cli/: cli.rs  mod.rs  table.rs
mixeros_engine/src/dasp/: mod.rs  module_manager.rs
mixeros_engine/src/dasp/dasp_modules/: module.rs  module_param.rs
mixeros_engine/src/dasp/dasp_modules/modules/: mod.rs
mixeros_engine/src/dasp/dasp_modules/modules/compressor/: module.rs
mixeros_engine/src/dasp/dasp_modules/modules/equalizer/: mod.rs  module.rs
mixeros_engine/src/dasp/processor/: buffer.rs  error.rs  mod.rs  processor.rs
mixeros_engine/src/router/: bus.rs  channel.rs  mod.rs  router.rs
mixeros_engine/src/shaders/: parametriceq.cl  parametriceq.spv
mixeros_engine/src/system/: mod.rs  state.rs  system.rs  util.rs
mixeros_engine/src/web/: mod.rs  server.rs
mixeros_engine/src/web/http_api/: metrics.rs
mixeros_engine/src/web/rpc/: mod.rs  rpc_server.rs
mixeros_engine/src/web/rpc/rpc_callbacks/: engine.rs
mixeros_engine/ui/: index.html  package.json  pnpm-lock.yaml
mixeros_engine/ui/src/: App.vue
mixeros_engine/ui/src/Components/dashboard/: cpuStatCard.vue
mixeros_engine/ui/src/Components/nav/: sidebar.vue
mixeros_engine/ui/src/Components/util/: charts.ts
mixeros_engine/ui/src/router/: index.ts
mixeros_jack/: Cargo.toml  README.md
mixeros_jack/jack-sys/: Cargo.toml  build.rs
mixeros_jack/jack-sys/src/: types.rs
mixeros_protocol/: Cargo.toml  build.rs
mixeros_protocol/protocol/: engine.capnp  info.capnp  network.capnp  system.capnp  util.capnp
mixeros_protocol/protocol/include/: device.capnp  util.capnp
mixeros_protocol/protocol/include/dasp_modules/: compressor.capnp  deesser.capnp  eq.capnp  expander.capnp  gate.capnp  image.capnp  limiter.capnp  pan.capnp  preamp.capnp
mixeros_protocol/protocol/include/sources/: bus.capnp  channel.capnp  mains.capnp
mixeros_protocol/protocol/include/sources/control/: dca.capnp  mutegroup.capnp
mixeros_protocol/protocol/include/system/: info.capnp  network.capnp  system.capnp
mixeros_protocol/src/: client.rs  lib.rs  server.rs  util.rs
mixeros_protocol/src/protocol/: headers.rs
mixeros_tools/: Cargo.toml
mixeros_tools/src/: installer.rs  main.rs  system.rs
