[package]
name = "MixerOSEngine"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.17.3"
num = "0.4.3"
dasp = { version = "0.11", features = ["signal", "interpolate"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
yaml_serde = "0.10.3"
ringbuf = "0.4.8"
atomic_float = "1.1.0"
parking_lot = "0.12.5"
cubecl = "0.9.0"