[package]
name = "MixerOSEngine"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = {version = "0.17.3", features = ["audio_thread_priority", "jack"]}
num = "0.4.3"
dasp = { version = "0.11", features = ["signal", "interpolate"] }

anyhow = "1.0"
ringbuf = "0.4.8"
atomic_float = "1.1.0"
parking_lot = "0.12.5"

# TUI libs
yansi = "1.0.1"
neofetch = "0.2.0"

# net libs
axum = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
yaml_serde = "0.10.4"
serde_json = "1"
tokio = { version = "1.50.0", features = ["full"] }

# compute
ash = { version = "0.38.0", features = ["linked"] }
gpu-allocator = "0.28.0"
bytemuck = { version = "1", features = ["derive"] }
