[package]
authors = ["Braylon Frazier <kirvilnet@gmail.com>"]
description = "A modified version of the jack crate"
edition = "2024"
license = "MIT AND GPL-3.0-or-later"
name = "mixeros_jack"
readme = "README.md"
version = "1.0.0"

[dependencies]
bitflags = "2"
jack-sys = {version = "0.5", path = "./jack-sys"}
lazy_static = "1.4"
libc = "0.2"
log = { version = "0.4", optional = true}
rtrb = { version = "0.3.2", optional = true }

[dev-dependencies]
approx = "0.5"
crossbeam-channel = "0.5"
ctor = "0.8.0"

[features]
default = ["dynamic_loading", "log"]
dynamic_loading = ["jack-sys/dynamic_loading"]
controller = ["rtrb"]

