[package]
name = "mixeros"
version = "0.0.2"
description = "MixerOS Main Interface/Client"
authors = ["KirvilNET <contact@kirvilnet.com>", "Braylon Frazier <braylonfrazier290@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mixeros_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-pinia = "4.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

cpal = "0.17.3"
num = "0.4.3"
parking_lot = "0.12.5"

