[package]
name = "MixerOSEngine"
version = "0.1.0"
edition = "2024"

[dependencies]
jack = {version = "0.13.5", features = ["dynamic_loading"]}
num = "0.4.3"
dasp = { version = "0.11", features = ["signal", "interpolate"] }

anyhow = "1.0"
ringbuf = "0.4.8"
atomic_float = "1.1.0"
parking_lot = "0.12.5"

# TUI libs
yansi = "1.0.1"
whoami = "2.1.1"
comfy-table = "7.2.2"
crossterm = "0.29.0"
sysinfo = "0.38.4"


# net libs
axum = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
yaml_serde = "0.10.4"
serde_json = "1"
tokio = { version = "1.50.0", features = ["full"] }

# compute
gpu-allocator = "0.28.0"
bytemuck = { version = "1", features = ["derive"] }
[dependencies.opencl3]
version = "0.12"
features = ["CL_VERSION_2_1", "CL_VERSION_2_2", "CL_VERSION_3_0", "serde"]


