module(
    name = "engine",
    version = "0.1.0"
)

bazel_dep(name = "rules_rust", version = "0.50.1")

RUST_EDITION = "2024"
RUST_VERSION = "1.85.0"

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = RUST_EDITION,
    versions = [RUST_VERSION],
)

use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")